--- a/src/templates/itemims.hbs
+++ b/src/templates/itemims.hbs
@@ -2,7 +2,7 @@
 	<item identifier="{{@key}}" isvisible="true" identifierref="{{resourcecode}}">
 		<title>{{title}}</title>
 		{{#each sections.items}}
-		{{> scormitem}}
+		{{> imsitem}}
 		{{/each}}
 	</item>
 {{else}}
