--- a/src/templates/imslrm_ims.hbs
+++ b/src/templates/imslrm_ims.hbs
@@ -179,7 +179,7 @@
     {{/if}}
 
     {{#if metadata.technical.duration}}   
-    <lom_duration uniqueElementName="duration">
+    <lom:duration uniqueElementName="duration">
       <lom:duration uniqueElementName="duration">P{{metadata.technical.duration.durationYearsDurTech}}Y{{metadata.technical.duration.durationMonthsDurTech}}M{{metadata.technical.duration.durationDaysDurTech}}DT{{metadata.technical.duration.durationHoursDurTech}}H{{metadata.technical.duration.durationMinutesDurTech}}M{{metadata.technical.duration.durationSecondsDurTech}}S</lom:duration>
       <lom:description>
           {{#each metadata.technical.duration.description}}
@@ -293,7 +293,7 @@
 
   {{#if metadata.rights.copyrightAndOtherRestrictions}}   
     <lom:copyrightAndOtherRestrictions uniqueElementName="copyrightAndOtherRestrictions">
-      <lom:source uniqueElementName="source">LOM-ESv1.0</source>
+      <lom:source uniqueElementName="source">LOM-ESv1.0</lom:source>
       <lom:value uniqueElementName="value">{{metadata.rights.copyrightAndOtherRestrictions}}</lom:value>
     </lom:copyrightAndOtherRestrictions>
   {{/if}}
